--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "loophole"
 version = "0.1.0"
-description = "Add your description here"
+description = "Local Dictation App with real-time transcription"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
@@ -12,3 +12,30 @@ dependencies = [
     "nemo_toolkit[asr]>=1.23",
     "pyperclip>=1.11.0",
 ]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Environment :: GUI :: Web",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: Microsoft :: Windows",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+]
+keywords = ["dictation", "transcription", "voice", "audio", "local"]
+authors = [{name = "LoopHole Team"}]
+urls = {Homepage = "https://github.com/yourusername/loophole"}
+
+[project.scripts]
+loophole = "src.loophole.main:main"
+
+[project.optional-dependencies]
+dev = ["pytest", "black", "mypy"]
+
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+where = ["src"]
