Fix package entry point and static file paths for proper installation
- Entry point was using src.loophole.main but src-layout packages are imported as just 'loophole'
- Static files now use importlib.resources for proper package-relative paths
- Removed sys.path hack that was masking the underlying import issue

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ authors = [{name = "LoopHole Team"}]
 urls = {Homepage = "https://github.com/yourusername/loophole"}
 
 [project.scripts]
-loophole = "src.loophole.main:main"
+loophole = "loophole.main:main"
 
 [project.optional-dependencies]
 dev = ["pytest", "black", "mypy"]
